# multimodal_rag_system

./: README.md  main.py  poetry.toml  pyproject.toml  reqs.txt
backups/: articles_2025-06-06_20-05-27.json
batch_articles_bcup/: articles.json
batch_data/: articles.json  metadata.json  multimodal_index.faiss
batch_rag/: app.py  batch_processor.py  build_index.py  embeddings.npy  logger.py  metadata.json  scrapper.py  test_articles.json  text_index.faiss
docs/: models_choices.md
evals/: eval_dataset.json  retrieval_evaluation.py
tests/: test_batch_processor.py
